--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "type": "git",
     "url": ""
   },
-  "author": "Clare Monahan",
+  "author": [
+    "Clare Monahan",
+    "Monica Wu",
+    "Molly Kent",
+    "William Shull"
+  ],
   "license": "ISC",
   "bugs": {
     "url": ""
@@ -30,7 +35,12 @@
     "chai": "^3.3.0",
     "chai-http": "^1.0.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-minify-css": "^1.2.1",
     "gulp-mocha": "^2.1.3",
+    "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.11",
     "karma-jasmine": "^0.3.6",
