--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "Clare Monahan",
     "Monica Wu",
     "Molly Kent",
-    "William Shull"
+    "William Shull",
+    "Lyle Charles Scott"
   ],
   "license": "ISC",
   "bugs": {
