started signin/up controllers, server-side passport auth middleware

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.13.3",
     "mongoose": "^4.1.11",
     "passport": "^0.3.0",
-    "passport-http": "^0.3.0"
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1"
   },
   "devDependencies": {
     "angular": "^1.4.7",
