--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "lodash.sample": "^3.1.0",
     "mongoose": "^4.1.11",
     "passport": "^0.3.0",
     "passport-http": "^0.3.0",
