--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "angular-cookies": "^1.4.7",
     "angular-mocks": "^1.4.7",
     "angular-route": "^1.4.7",
+    "bcrypt": "^0.8.5",
     "chai": "^3.3.0",
     "chai-http": "^1.0.0",
+    "eat": "^0.1.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-minify-css": "^1.2.1",
