--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eat": "^0.1.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-jasmine": "^2.1.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-mocha": "^2.1.3",
     "gulp-notify": "^2.2.0",
