--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/TriviApp"
   },
   "author": [
     "Clare Monahan",
@@ -19,9 +19,9 @@
   ],
   "license": "ISC",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/TriviApp"
   },
-  "homepage": "",
+  "homepage": " ",
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
